leitstand-ui-web/src/main/resources/META-INF/resources/ui/css/leitstand/leitstand.css
/* ... */
.entity {
	border-left: 2px solid #333;
}

.entity h4{
    font-weight: normal;
}

.popup_menu {
    border-left: 2px solid #333;
    cursor: pointer;
    display: inline-block;
    position: relative; 
    padding: 5px 10px;
}

.popup_menu:first-of-type {
    border: none;
    margin-left: 5px;
    display: inline-block;
}

.popup_menu nav{
    display: none;
}
 
.popup_menu h4 a{
	color: black;
	background: none;
}

.form-group.flattened div.label {
	line-height: 32px
}

.form-group div.label h4 {
	margin: 4px 0 0
}

.form-group div.label h4.is-error {
	color: #bd2c00
}

.form-group div.label h4.is-success {
	color: #55a532
}

.form-group div.label h4+.note {
	margin-top: 0
}

.form-group.required div.input label::after {
	padding-left: 5px;
	color: #bd2c00;
	content: "*"
}

.hfields .form-group div.input label {
	display: inline-block;
	margin: 5px 0 0;
	color: #666
}

.hfields .form-group div.input img {
	position: relative;
	top: -2px
}

.form-group div.input {
	margin: 0 0 6px
} 

.form-group textarea.form-control {
	width: 100%; 
	max-width: 800px;
}

/*--------------------------------------------------------*/
/* Common UI styles */
/*--------------------------------------------------------*/

ui-view,
ui-view-menu {
    display: block;
}

ui-view{
	max-width: 1400px;
	margin: auto;
}

ui-view-menu {
	margin-left: 15px;
    display: block;
}

ui-module-menu{
	margin-left: 15px;
}

.error-page h1 {
	background-image: url('/ui/images/logo.png');
	background-position: center;
	background-repeat: no-repeat;
	font-weight: 300;
	padding-top: 240px;
	text-align: center;
}

nav.main{
	background-color: #333;
	font-weight: bold;
	color:white;
	margin-left: 200px;
	vertical-align:center;
	height: 40px;
}

nav.main a.btn {
	color: #333;
	margin-right: 10px; 
	margin-top:6px;
	background-color: #FFF !important;
	border: 1px solid #333;
	background-image:none;
}

nav.main a.btn:hover {
    color: #FFF;
    margin-right: 10px; 
    margin-top:6px;
    background-color: #333 !important;
    background-image:none;
    border: 2px solid #FFF;
}

nav.main a.main-menu-item {
	display: inline-block;
	text-decoration:none;
	position: relative;
    padding: 5px 10px;
    font-weight: normal;
	color: white;
	border: none;
	font-size: larger;
	margin-top: 3px;
}

nav.main a.main-menu-item:hover, 
nav.main a.main-menu-item.selected{
    display: inline-block;
    font-weight: normal;
    border: none;
    text-shadow: none;
    font-size: larger;
    background-color: #333;
    border-bottom: 3px solid white;
    border-radius:none;
}

/* Header section */
.header {
	background-image: url('/ui/images/header/logo.png'); /* Header uses intentionally a different logo!*/
	background-position: 30px;
	background-repeat: no-repeat;
	background-size:100px;
	background-color: #333;
    position: fixed;
    width: 100%;
    height: 45px;
    overflow: hidden;
    z-index: 100;
}

ui-module {
	padding-top: 45px;
    display: block;
}

/* Module section */
ui-module.split_layout .row {
	position: relative;
}

ui-module.split_layout div.pane.navigation {
	position: absolute;
	top: 0;
	left: 0;
	margin-left: 15px;
	margin-right: 15px;
	width: 250px;
	margin-top: 0px;
    margin-bottom: 0px;
    z-index: 1;
}

ui-module.split_layout div.pane.content {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	padding-left: 265px;
	margin-right: 15px;
	margin-top: 0px;
	margin-bottom: 0px;
}

ui-module div.pane.content ui-view {
    max-width: 1400px;
    margin: auto;
    padding: 0px 15px;
}



div.view {}


/** A hidden element that is displayed dynamically by the controller.*/
.hidden{
	visibility:hidden;
}

/** Containers for columns to display elements from left to right.*/
.row {
	padding: 10px 0px;
	clear:both;
}

#page-container .row {
	margin: 0px -10px;
}

/* Messagebox for popup messages such as a date-picker, for example.*/ 
.messagebox-container{
	position: relative;
}

.messagebox{
	position: absolute;
	left: 20px;
	top: 20px;
}

/** Fieldsets to group input elements.*/
fieldset{
	margin-top: 5px; /* Adjust top margin.*/
}

/** General table styles.*/
table {
	width: 100%;
}
/** Hide caption, it is intended for screen readers only.*/
caption {
	display:none;
}

/** List styles.*/
table.list thead th {
	border-collapse: collapse;
	border-left: 1px solid #EFEFEF;
	padding: 0.25em;
}

table.list thead th:FIRST-CHILD {
	border-collapse: collapse;
	border-left: 1px solid white;
	padding: 0.25em;
}

table.list th.check, 
table.list td.check,
table.details th.check, 
table.details td.check {
	width: 2%
}

table.list th.tiny, 
table.list td.tiny,
table.details td.tiny,
table.details td.tiny {
	width: 8%
}

table.list th.extra-small, 
table.list td.extra-small,
table.details th.extra-small, 
table.details td.extra-small {
	width: 12.5%
}


table.list th.small,
table.list td.small,
table.details th.small, 
table.details td.small{
	width: 25%;	
}

table.list th.medium,
table.list td.medium,
table.details th.medium, 
table.details td.medium {
	width: 50%;
}

table.list th.large,
table.list td.large {
	width: 75%;
}

table.list th.text,
table.list td.text {
	text-align: left;
	vertical-align: top;
}

table.list tr.middle th.text,
table.list tr.middle td.text {
    text-align: left;
    vertical-align: middle;
}

table.list th.key,
table.list td.key {
	text-align: right;
	padding-right: 10px;
}

table.list th.value,
table.list td.value {
	text-align: right;
	padding-left: 10px;
}

table.list th.metric,
table.list td.metric {
	text-align: center;
}

table.list>tbody>tr, table.list>thead>tr {
	border-bottom: 1px solid #EFEFEF;
}

table.list>tbody>tr:hover{
	border-bottom: 1px solid #EFEFEF;
	background-color: #EFEFEF;
}

table.list>tbody>tr>td {
	text-align:center;
	padding: 5px
}

table.list tbody td>button{
	margin:0;
}

table.list tfoot tr td{
	padding-top: 10px;
}

table.list button[disabled]{
	display:none;
}

th.top,
td.top {
	vertical-align: top;
}
/* ... */

